Add User MG,Sign-In Events

--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -33,6 +33,12 @@
 .sign-in-body {
 }
 
+.sign-in-option {
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: top left;
+}
+
 .sign-in-button {
     background-color: green;
     color: white;
