--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -1,11 +1,11 @@
 
 .sign-in-box {
     max-width: 50%;
+    height: 70%;
     box-shadow: 10px 10px 15px silver;
     border-color: lightblue;
     border-width: 1px;
     border-style: solid;
-    
 }
 
 .sign-in-header {
